W02 Project: Contacts Part 2 (#1)
* Create functions to create, update, and delete contacts

* Add routes for creating, updated, and soft-deleting contacts

* Set default value for isDeleted

* Enable JSON parsing for request bodies

* Add new constant

* Create new contact

* Sample request to create new contact

* Create sample file for updating contacts

* Create sample file for soft-deleting contacts

* Only include non-deleted contacts in the GET response

* Create folder for REST files

* Update pnpm

* Remove index routes

* Update controller for updating contacts

* Generate Swagger file
